name:                okasaki
version:             0.1.0
synopsis:            Okasaki's Purely Functional Data Structures
homepage:            http://github.com/jtobin/okasaki
license:             MIT
license-file:        LICENSE
author:              Jared Tobin
maintainer:          jared@jtobin.ca
build-type:          Simple
cabal-version:       >= 1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      lib
  exposed-modules:
      Okasaki.Stack
    , Okasaki.Tree
  build-depends:
      base
    , deriving-compat
    , recursion-schemes

