name:                okasaki
version:             0.1.0
synopsis:            Okasaki's Purely Functional Data Structures
homepage:            http://github.com/jtobin/okasaki
license:             MIT
license-file:        LICENSE
author:              Jared Tobin
maintainer:          jared@jtobin.ca
build-type:          Simple
cabal-version:       >= 1.10

library
  default-language:    Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveTraversable
    LambdaCase
    RankNTypes
    TypeFamilies
    ViewPatterns
  hs-source-dirs:
    lib
  other-modules:
    Okasaki.Orphans
  exposed-modules:
      Okasaki.Heap.Leftist
    , Okasaki.Map
    , Okasaki.Stack.CPS
    , Okasaki.Tree
    , Okasaki.Tree.CPS
  build-depends:
      base
    , data-fix
    , deriving-compat
    , recursion-schemes

